# Procon36

./: .gitignore  CMakeLists.txt  README.md  solver.cpp
config/: parameter_settings.json
doc/: imgui.md
docs/: imgui_window_customize.md
include/common/: namespace_macro.hpp
include/gui/: gui.hpp
include/util/: timer.hpp
src/: CMakeLists.txt  main.cpp
src/gui/: gui.cpp
src/util/: timer.cpp
test/: benchmark.cpp
